# whatsapp_bot

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  setup.sh
app/: __init__.py  main.py
app/agents/: __init__.py  agent_manager.py  base_agent.py  classifier_agent.py  sales_agent.py  support_agent.py
app/data/: __init__.py  examples.py
app/database/: database.py  seed_data.py
app/models/: product.py
app/services/: __init__.py  conversation_service.py  instagram_service.py  product_service.py  whatsapp_service.py
app/static/: index.html
app/tests/: conftest.py  test_agents.py  test_conciseness.py  test_main.py
