[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whatsapp-bot"
version = "0.1.0"
authors = [
    { name = "Your Name" }
]
description = "WhatsApp Bot for knife store"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
] 